# mpm-vibe-coding

./: .gitattributes  .gitignore  QUICKSTART.md  QUICKSTART_EN.md  README.md  README_EN.md  _MPM_PROJECT_RULES.md  install.ps1  mcp-config-example.json  package_product.py  smithery.yaml  visualize_history.py
.github/workflows/: release.yml
.well-known/mcp/: server-card.json
docs/: DESIGN_task_chain_v3.md  MANUAL.md  MANUAL_EN.md  UPDATE_REPORT_2026-02-24.md
mcp-server-go/: _MPM_PROJECT_RULES.md  go.mod  go.sum
mcp-server-go/cmd/server/: main.go  main_fake.rs
mcp-server-go/configs/: persona_library.json
mcp-server-go/internal/core/: database.go  detector.go  memory.go  memory_task_chain.go  memory_test.go  models.go
mcp-server-go/internal/services/: ast_indexer.go  ast_indexer_test.go  search_engine.go
mcp-server-go/internal/services/ast_indexer_rust/: Cargo.toml  README.md
mcp-server-go/internal/services/ast_indexer_rust/src/: main.rs
mcp-server-go/internal/tools/: analysis_tools.go  doc_tools.go  enhance_tools.go  enhance_tools_test.go  intelligence_tools.go  map_renderer.go  memory_tools.go  resources.go  search_tools.go  skill_tools.go  system_tools.go  task_chain_status.go  task_chain_templates.go  task_chain_templates_loader.go  task_chain_templates_test.go  task_chain_v2.go  task_chain_v3.go  task_chain_v3_api.go  (+3 more)
mcp-server-go/skills/: README.md
opencode-agents/: .gitignore  README.md
opencode-agents/docs/: LLM_FRIENDLY_AGENT_DOCS.md  models.md
scripts/: build-cross-platform.sh  build-unix.sh  build-windows.ps1  smithery-build.js  sync.ps1
(+23 files in other folders)
