[package]
name = "ast_indexer_rust"
version = "0.1.0"
edition = "2021"

[dependencies]
# CLI
clap = { version = "4.4", features = ["derive"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Filesystem & Concurrency
walkdir = "2.4"
rayon = "1.8"
ignore = "0.4" # Respect .gitignore

# Database
# "bundled" feature ensures sqlite3 is compiled statically (key for Windows)
rusqlite = { version = "0.29", features = ["bundled"] }

# Hashing
sha2 = "0.10"
hex = "0.4"

# Tree-sitter
tree-sitter = "0.20"
tree-sitter-python = "0.20"
tree-sitter-javascript = "0.20"
tree-sitter-typescript = "0.20"
tree-sitter-go = "0.20"
tree-sitter-c = "0.20"
tree-sitter-cpp = "0.20"
tree-sitter-java = "0.20"
tree-sitter-rust = "0.20"
anyhow = "1.0.100"
rand = "0.9.2"

# Fuzzy Matching
strsim = "0.11"
rust-stemmers = "1.2"
